# merovex-tauri-starter

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
docs/: ARCHITECTURE.md  DESIGN.md  FEATURES.md  MAINTAINING.md  NOTIFICATIONS.md  SPRITE_INVENTORY.md
scripts/: check-no-svelte-css.mjs  make-placeholder-icon.mjs
src/: App.svelte  index.html  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/app_db/: V1__baseline_schema.sql
src-tauri/migrations/document_db/: V1__baseline_schema.sql  V2__notifications.sql
src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  logging.rs  main.rs  menu.rs  models.rs
src/lib/: api.js  doc.js  i18n.js
src/lib/components/: Avatar.svelte  CommandPalette.svelte  Footer.svelte  Icon.svelte  Notifications.svelte  Toaster.svelte
src/lib/stores/: document.svelte.js  notifications.svelte.js  persisted.svelte.js  prefs.svelte.js  toast.svelte.js  ui.svelte.js
src/styles/: base.css  components.css  index.css  tokens.css  utilities.css
